--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.28.0",
-    "vue": "^3.4.29"
+    "pinia": "^3.0.1",
+    "vue": "^3.4.29",
+    "vue-axios": "^3.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
